# mrvk_project

./: .dropbox  .gitignore  .gitmodules  basic_commands_MRVK
kv01_driver/: CMakeLists.txt  package.xml
kv01_driver/config/: kv01_controllers.conf  kv01_driver.yaml
kv01_driver/include/kv01_driver/: command.h  common_functions.h  communication_interface.h  hwInterface.h
kv01_driver/launch/: kv01_driver.launch  kv01_driverv1.launch  load_controllers.launch
kv01_driver/msg/: joint_speed.msg
kv01_driver/src/: command.cpp  common_functions.cpp  communication_interface.cpp  hwInterface.cpp  kv01_driver.cpp  kv01_driver_servis.cpp
kv01_driver/srv/: driver.srv
kv01_final/kv01_actionserver/: CMakeLists.txt  package.xml
kv01_final/kv01_actionserver/action/: move.action
kv01_final/kv01_actionserver/src/: kv01_actionserver_node.cpp  kv01_actionserver_node_klb4fail.cpp  kv01_actionserver_point.cpp
kv01_final/kv01_driver/: CMakeLists.txt  package.xml
kv01_final/kv01_driver/src/: common_functions.cpp  kv01_driver_servis.cpp
kv01_final/kv01_driver/srv/: serial_data.srv  serial_data.srv~
kv01_final/kv01_interface/: CMakeLists.txt  package.xml
kv01_final/kv01_interface/launch/: kv01_interface.launch  kv01_joystick.launch  mrvk_interface.launch  mrvk_joystick.launch
kv01_final/kv01_interface/src/: kv01_joystick.cpp  kv01_joystick.cpp~  kv01_menu.cpp~
mrvk_driver/: CMakeLists.txt  CMakeLists.txt~  mapping.rviz  package.xml  package.xml~
mrvk_driver/cfg/: RobotDynParam.cfg  hokuyo_filter_cfg.yaml
mrvk_driver/config/: mrvk_controllers.conf  mrvk_controllers.conf~  mrvk_driver.yaml  mrvk_driver.yaml~  mrvk_limits.yaml~  mrvk_velocity_controller.conf~  test_velocity_controller.conf
mrvk_driver/include/mrvk_driver/: HwInterface.h  HwInterface.h~  callbacks.h  command.h  command.h~  communication_interface.h  communication_interface.h~  conversions.h  conversions.h~  hwInterface.h  mrvk_serial.h
mrvk_driver/install/: 49-teensy.rules  96-mrvk-boards.rules  97-adis-devices.rules  97-gps.rules  98-adis-devices.rules  99-hokuyo.rules  99-usb-serial.rules  run_me.sh
mrvk_driver/launch/: driver.launch  driver.launch~  gps.launch  group_velocity_controller.launch~  hokuyo_filter.launch  hovno.launch  load_controllers.launch  load_controllers.launch~  mapping.launch  mapping.launch~  mrvk_driver.launch  navigation.launch  skuska.launch~  spawn_diff_controller.launch  start_group_velocity_controller.launch  start_group_velocity_controller.launch~  start_velocity_controllers.launch  start_velocity_controllers.launch~  user_interface.launch  user_interface.launch~  velocity_controllers.launch~
mrvk_driver/msg/: Battery.msg  Error_log.msg  Mb_status.msg  Mb_status.msg~  Mcb_status.msg  Power_managment.msg
mrvk_driver/rviz/: mapping.rviz  mappping.rviz
mrvk_driver/src/: HwInterface.cpp  HwInterface.cpp~  callbacks.cpp  callbacks.cpp~  command.cpp  command.cpp~  communication_interface.cpp  communication_interface.cpp~  conversions.cpp  conversions.cpp~  hwInterface.cpp  mrvk_driver.cpp  mrvk_driver.cpp.save  mrvk_driver.cpp~  mrvk_init.cpp  poznamky  poznamky~  robot_control.cpp
mrvk_driver/tests/include/: Mrvk.h  read_file.h
mrvk_driver/tests/src/: Mrvk.cpp  test.cpp
mrvk_driver/tests/urdf/: transmission_interface_loader_valid.urdf~
mrvk_gui/: CMakeLists.txt  mrvk_gui_plugin.xml  package.xml
mrvk_gui/include/mrvk_gui/: ButtonException.h  DiagnosticItem.h  DiagnosticModel.h  DiagnosticsWidget.h  GuiDefines.h  ImuButtons.h  MrvkControllButtons.h  MrvkGuiCommon.h  MrvkGuiPlugin.h  RobotourControl.h  Subscriber.h  TopicFrequency.h
mrvk_gui/launch/: gui_test.launch
mrvk_gui/src/: DiagnosticItem.cpp  DiagnosticModel.cpp  DiagnosticsWidget.cpp  ImuButtons.cpp  MrvkControllButtons.cpp  MrvkGuiCommon.cpp  MrvkGuiPlugin.cpp  RobotourControl.cpp  buttonsTest.cpp  main.cpp
mrvk_gui/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
mrvk_gui/ui/Widgets/Camera/: Camera.cpp  (+2 more)
mrvk_gui/uis/: ControlWidget.ui  DiagnosticsWidget.ui  MainWidget.ui  MainWindow.ui
mrvk_gui_interface/: CMakeLists.txt  README.md  package.xml
mrvk_gui_interface/action/: PerformWaypoints.action
mrvk_gui_interface/include/mrvk_gui_interface/: GuiInterface.h
mrvk_gui_interface/msg/: GeoPoint.msg
mrvk_gui_interface/src/: GuiInterface.cpp  GuiInterfaceNode.cpp
mrvk_gui_interface/srv/: AddGeoWaypoint.srv  AddGeoWaypoints.srv  EditWaypoint.srv  EraseWaypoint.srv  GetWaypoints.srv  GetWaypointsQueue.srv  SwapWaypoints.srv
mrvk_supervisor/: CMakeLists.txt  package.xml
mrvk_supervisor/config/: supervisor_param.yaml
mrvk_supervisor/launch/: mapping.launch  mrvk_master.launch  mrvk_supervisor.launch
mrvk_supervisor/src/: mrvk_supervisor.cpp  mrvk_supervisor.cpp.save  mrvk_supervisor.cpp.save.1  mrvk_supervisor.cpp.save.2  mrvk_supervisor.cpp.save.3
recover_behaviours/wait_and_clear_costmap_recovery/: CMakeLists.txt  package.xml  waccr_plugin.xml
recover_behaviours/wait_and_clear_costmap_recovery/src/: wait_and_clear_costmap_recovery.cpp
reverse_movement_recovery/: CMakeLists.txt  package.xml  rmr_plugin.xml
reverse_movement_recovery/include/reverse_movement_recovery/: reverse_movement_recovery.h
reverse_movement_recovery/src/: reverse_movement_recovery.cpp
vfh_local_planner/: CMakeLists.txt  CMakeLists.txt~  package.xml  vfh_blp_plugin.xml  vfh_blp_plugin.xml~  vfh_local_planner_plugin.xml~
vfh_local_planner/include/vfh_local_planner/: vfh_planner.h  vfh_planner_ros.h
vfh_local_planner/src/: vfh_planner.cpp  vfh_planner_ros.cpp
vision/kinect_test/: CMakeLists.txt  kinectTest.rviz  package.xml
vision/kinect_test/launch/: kinect2_bridge.launch  test_octomap.launch
vision/kinect_test/src/: kinect_transform.cpp
vision/mrvk_sidewalk/: CMakeLists.txt  CMakeLists.txt~  README  doxyConfig  package.xml  package.xml~
vision/mrvk_sidewalk/calib/: calibEdgePointDistribution.ods  out_camera_data.xml  sidewalkTransformCalib.yaml
vision/mrvk_sidewalk/config/: VID5.xml  in_VID5.xml  segmentation_config.yaml  sidewalk_config.yaml
vision/ximea_camera/: CMakeLists.txt  package.xml
(+398 files in other folders)
