<?xml version="1.0"?>
<package>
  <name>reverse_movement_recovery</name>
  <version>0.0.0</version>
  <description>The reverse_movement_recovery package</description>

  <maintainer email="matejbart@gmail.com">Matej Bartosovic</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
    <nav_core plugin="${prefix}/rmr_plugin.xml" />
  </export>
</package>
